Updating portfolio data

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -907,7 +907,7 @@
 		background-position:	top left,							top left;
 		background-repeat:		repeat,								no-repeat;
 		background-size:		auto,								auto 100%;
-		color: _palette(accent2, fg);
+		color: rgba(255, 255, 255, 0.7);
 		height: 100%;
 		left: 0;
 		padding: ($size-header-pad * 2) $size-header-pad;
